--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,13 +6,12 @@
 
 <div class="text-center">
     <label for="wizards">Who's the best wizard?</label>
-    <input type="text" id="wizards" name="wizards" ajax-url="/index?handler=Partial">
+    <input type="text" id="wizards" name="wizards" data-autocomplete-url="/index?handler=Partial">
 </div>
 
 <script>
-    // Get the input field
-let wizards = document.querySelector('#wizards');
-
+    // Get any autocomplete fields
+	let fields = document.querySelectorAll('[data-autocomplete-url]');
 
 /**
  * Create and render the datalist element
@@ -52,36 +51,39 @@ function renderDatalist (ctrl, data) {
     ctrl.after(datalist);
 }
 
-	// Add an event handler for when text is being entered
-    wizards.addEventListener('input', function (e) {
-		// Clear any pending timeout as it did not expire before another change
-		if (e.target.timeout)
-			clearTimeout(wizards.timeout);
+    // Loop through each field and add a handler
+	for (let field of fields) {
+		// Add an event handler for when text is being entered
+		field.addEventListener('input', function (e) {
+			// Clear any pending timeout as it did not expire before another change
+			if (e.target.timeout)
+				clearTimeout(wizards.timeout);
 
-		// Only do an ajax search if at least 2 characters were entered
-        if (e.target.value.length > 2) {
-			// Wait 500ms in case user is still typing to avoid too many sequential calls
-            e.target.timeout = setTimeout(function () {
-				// Fetch the data and render the datalist element
-				fetch(e.target.getAttribute('ajax-url'), {
-					method: 'POST',
-					headers: {
-						'Accept': 'application/json',
-						'Content-Type': 'application/json',
-						//  RequestVerificationToken: document.getElementsByName("__RequestVerificationToken")[0].value,
-					},
-                    body: JSON.stringify(e.target.value)
-				}).then(function (response) {
-					if (response.ok) {
-						return response.json();
-					}
-					throw response;
-				}).then(function (data) {
-                    renderDatalist(e.target, data);
-				}).catch(function (error) {
-					console.warn(error);
-				});
-			}, 500);
-		}
-	});
+			// Only do an ajax search if at least 2 characters were entered
+			if (e.target.value.length > 2) {
+				// Wait 500ms in case user is still typing to avoid too many sequential calls
+				e.target.timeout = setTimeout(function () {
+					// Fetch the data and render the datalist element
+					fetch(e.target.getAttribute('data-autocomplete-url'), {
+						method: 'POST',
+						headers: {
+							'Accept': 'application/json',
+							'Content-Type': 'application/json',
+							//  RequestVerificationToken: document.getElementsByName("__RequestVerificationToken")[0].value,
+						},
+						body: JSON.stringify(e.target.value)
+					}).then(function (response) {
+						if (response.ok) {
+							return response.json();
+						}
+						throw response;
+					}).then(function (data) {
+						renderDatalist(e.target, data);
+					}).catch(function (error) {
+						console.warn(error);
+					});
+				}, 500);
+			}
+		});
+	}
 </script>
